Community spenden button alignment [#214 state:resolved]

--- a/theme/_css/layout.less
+++ b/theme/_css/layout.less
@@ -1005,9 +1005,12 @@
     .spenden .icon {
 	    position: relative;
     }
-    .spenden .spenden-paypal select {
-    	width:auto; 
-    	margin:10px 0 5px;
+    .spenden .spenden-paypal .os0_wrapper {
+    	margin:10px 0px;
+    }
+	.spenden .spenden-paypal select {
+    	margin: 0px !important;
+		width: 130px;
     }
     .spenden form { margin: 0px; }
     
